Refactor gallery CSS and update script source in technoart.html

--- a/HTML/technoart.html
+++ b/HTML/technoart.html
@@ -675,7 +675,7 @@
             </p>
         </div>
     </main>
-    <script src=""></script>
+    <script src="https://raw.githack.com/ieee-sfit/ieee-event-catalog/main/SCRIPTS/technoart.js"></script>
 </body>
 
 </html>
