Refactor image URLs in mosaic slideshow

--- a/HTML/mosaic.html
+++ b/HTML/mosaic.html
@@ -138,7 +138,7 @@
         <!-- Slide 1 -->
         <div class="slide active">
             <div class="card" style="background-image: url('https://www.shutterstock.com/image-photo/war-concept-night-battle-scene-600nw-1970747396.jpg');background-repeat: no-repeat;background-size: cover;">
-                <img class="agent-img" src="/IMAGES/fotor-ai-20240924233928-removebg-preview.png" alt="Jett">
+                <img class="agent-img" src="https://raw.githubusercontent.com/ieee-sfit/ieee-event-catalog/refs/heads/main/IMAGES/fotor-ai-20240924233928-removebg-preview.png" alt="Jack">
                 <div class="agent-name">Commander Jack</div>
                 <div class="abilities">
                     <p>Class: Admiral</p><br>
@@ -150,7 +150,7 @@
         <!-- Slide 2 -->
         <div class="slide">
             <div class="card" style="background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20230407/pngtree-sea-waves-turbulent-water-ripples-image_2145390.jpg');background-repeat: no-repeat;background-size: cover;">
-                <img class="agent-img" src="/IMAGES/fotor-ai-20240924233551-removebg-preview.png" alt="Phoenix">
+                <img class="agent-img" src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/fotor-ai-20240924233551-removebg-preview.png?raw=true" alt="Alex">
                 <div class="agent-name">Captain Alex</div>
                 <div class="abilities">
                     <p>Class: Navigator</p><br>
@@ -164,7 +164,7 @@
         <!-- Slide 3 -->
         <div class="slide">
             <div class="card" style="background-image: url('https://wallpaperaccess.com/full/1628817.jpg');background-repeat: no-repeat;background-size: cover;">
-                <img class="agent-img" src="/IMAGES/pikaso_texttoimage_valorant-art-style-based-shipwrightyoung-lady-and--removebg-preview.png" alt="Sage">
+                <img class="agent-img" src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/pikaso_texttoimage_valorant-art-style-based-shipwrightyoung-lady-and--removebg-preview.png?raw=true" alt="Emma">
                 <div class="agent-name">Dr. Emma</div>
                 <div class="abilities">
                     <p>Class: Restorer</p><br>
@@ -176,7 +176,7 @@
         <!-- Slide 4 -->
         <div class="slide">
             <div class="card" style="background-image: url('https://t4.ftcdn.net/jpg/04/96/93/97/360_F_496939773_GXjGabzlSY0sSXOAG2pofBYqcKmZeXaq.jpg');background-repeat: no-repeat;background-size: cover;">
-                <img class="agent-img" src="../IMAGES/pikaso_texttoimage_valorant-art-style-based-Recon-Scout-Liam-and-the--removebg-preview.png" alt="Sova">
+                <img class="agent-img" src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/pikaso_texttoimage_valorant-art-style-based-Recon-Scout-Liam-and-the--removebg-preview.png?raw=true" alt="Liam">
                 <div class="agent-name">Scout Liam</div>
                 <div class="abilities">
                     <p>Class: Recon</p><br>
@@ -188,7 +188,7 @@
         <!-- Slide 5 -->
         <div class="slide">
             <div class="card" style="background-image: url('https://static.vecteezy.com/system/resources/thumbnails/034/895/364/small_2x/animated-illustration-of-moving-a-staircase-to-heaven-seamless-looping-animated-video.jpg');background-repeat: no-repeat;background-size: cover;">
-                <img class="agent-img" src="/IMAGES/pikaso_texttoimage_valorant-art-style-based-Oracle-Sage-Mia-and-the-i-removebg-preview.png" alt="Reyna">
+                <img class="agent-img" src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/pikaso_texttoimage_valorant-art-style-based-Oracle-Sage-Mia-and-the-i-removebg-preview.png?raw=true" alt="Mia">
                 <div class="agent-name">Sage Mia</div>
                 <div class="abilities">
                     <p>Class: Oracle</p><br>
@@ -200,7 +200,7 @@
         <!-- Slide 6 -->
         <div class="slide">
             <div class="card" style="background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20230715/pngtree-3d-illustration-of-warzone-destruction-from-nuclear-bomb-attack-image_3889544.jpg');background-repeat: no-repeat;background-size: cover;">
-                <img class="agent-img" src="../IMAGES/pikaso_texttoimage_valorant-art-style-based-Demolisher-Bomber-Max-and-removebg-preview.png" alt="Omen">
+                <img class="agent-img" src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/pikaso_texttoimage_valorant-art-style-based-Demolisher-Bomber-Max-and-removebg-preview.png?raw=true" alt="Max">
                 <div class="agent-name">Bomber Max</div>
                 <div class="abilities">
                     <p>Class: Demolisher</p><br>
