--- a/HTML/mosaic.html
+++ b/HTML/mosaic.html
@@ -11,7 +11,7 @@
             box-sizing: border-box;
         }
 
-        body {
+        .body {
             font-family: Arial, sans-serif;
             background-color: #1e1e2f;
             color: white;
