Refactor image URLs in mosaic slideshow

--- a/HTML/mosaicmp.html
+++ b/HTML/mosaicmp.html
@@ -150,7 +150,7 @@
             position: relative;
             width: 100%;
             height: auto;
-            background-image: url(https://i.pinimg.com/originals/47/79/fb/4779fbe30ea7392487fc2dcce1b5afee.jpg);
+            background-image: url(https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/download.jpeg?raw=true);
             background-attachment: fixed;
             background-size: cover;
             -moz-background-size: cover;
@@ -790,57 +790,57 @@
             <div class="items">
                 <div class="item active medium">
                     <div class="name">Counter-Attack</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_2cw0dx2cw0dx2cw0.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_2cw0dx2cw0dx2cw0.jpeg?raw=true">
                     <div class="definition">When hit, get immediate chance to retaliate.</div>
                 </div>
                 <div class="item next difficult">
                     <div class="name">Stealth Mode</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_3eij4f3eij4f3eij.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_3eij4f3eij4f3eij.jpeg?raw=true">
                     <div class="definition">Hide a ship temporarily.</div>
                 </div>
                 <div class="item difficult">
                     <div class="name">Nuke</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_6dsbmf6dsbmf6dsb.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_6dsbmf6dsbmf6dsb.jpeg?raw=true">
                     <div class="definition">Hit a 3x3 grid.</div>
                 </div>
                 <div class="item difficult">
                     <div class="name">Shield</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_8k6asu8k6asu8k6a.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_8k6asu8k6asu8k6a.jpeg?raw=true">
                     <div class="definition">Defend a ship from attack.</div>
                 </div>
                 <div class="item medium">
                     <div class="name">Radar Jam</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_a26t6xa26t6xa26t.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_a26t6xa26t6xa26t.jpeg?raw=true">
                     <div class="definition">Make the last hit invalid.</div>
                 </div>
                 <div class="item medium">
                     <div class="name">Artillery</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_avfwkiavfwkiavfw.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_avfwkiavfwkiavfw.jpeg?raw=true">
                     <div class="definition"> Get 3 consecutive hits.</div>
                 </div>
                 <div class="item difficult">
                     <div class="name">Jackpot/gods hand</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_jdg26djdg26djdg2.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_jdg26djdg26djdg2.jpeg?raw=true">
                     <div class="definition">Steal opponent's ability/ Spin the wheel.</div>
                 </div>
                 <div class="item medium">
                     <div class="name">Fake Hit</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_k1etx9k1etx9k1et.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_k1etx9k1etx9k1et.jpeg?raw=true">
                     <div class="definition">Confuses the team by adding a decoy ship.</div>
                 </div>
                 <div class="item difficult">
                     <div class="name">AirStrike</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_v3y8q3v3y8q3v3y8.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_v3y8q3v3y8q3v3y8.jpeg?raw=true">
                     <div class="definition">Attack an entire row/ column.</div>
                 </div>
                 <div class="item medium">
                     <div class="name">HackIt</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_ptur09ptur09ptur.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_ptur09ptur09ptur.jpeg?raw=true">
                     <div class="definition">Get one enemy location.</div>
                 </div>
                 <div class="item prev difficult">
                     <div class="name">Revive</div>
-                    <img src="/IMAGES/Gemini_Generated_Image_qbeyafqbeyafqbey.jpeg">
+                    <img src="https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/Gemini_Generated_Image_qbeyafqbeyafqbey.jpeg?raw=true">
                     <div class="definition">Return a blown ship and place it somewhere new.(Can’t place a
                         ship on a spot that is hit)</div>
                 </div>
