Refactor image URL in mosaic slideshow

--- a/HTML/mosaicmp.html
+++ b/HTML/mosaicmp.html
@@ -166,7 +166,7 @@
             overflow: hidden;
             position: relative;
             width: 100%;
-            background-image: url(https://static.vecteezy.com/system/resources/thumbnails/003/220/114/original/gaming-abstract-background-video.jpg);
+            background-image: url(https://github.com/ieee-sfit/ieee-event-catalog/blob/main/IMAGES/howtoplay.jpg?raw=true);
             background-attachment: fixed;
             background-size: cover;
             -moz-background-size: cover;
