Refactor background color in mosaic slideshow HTML file

--- a/HTML/mosaicmp.html
+++ b/HTML/mosaicmp.html
@@ -626,7 +626,7 @@
 
         /*Ships*/
         .ships {
-            background: #212121;
+            background: #0f0f0f;
             min-height: 100vh;
             /* Dark background color */
             font-family: Tahoma;
