Refactor HTML file for mosaic slideshow

--- a/HTML/mosaicmp.html
+++ b/HTML/mosaicmp.html
@@ -596,7 +596,8 @@
             }
         }
 
-        .headtitle {
+        .headtitle {            
+            text-align: center;
             align-items: center;
             justify-content: center;
             align-content: center;
@@ -1247,6 +1248,8 @@
 
         <section class="headtitle">
             <div class="title">
+                <h2>IEEE</h2>
+                <h3>PRESENTS</h3>
                 <h2>BATTLESHIPS</h2>
             </div>
             <div class="scroll-down">
@@ -1325,7 +1328,7 @@
                         <div class="agent-name">Commander Jack</div>
                         <div class="abilities">
                             Class: Admiral<br><br>
-                            Blitzstrike<br>Can hit 2 locations in one turn
+                            <strong>Blitzstrike</strong><br>Can hit 2 locations in one turn
                         </div>
                     </div>
                 </div>
@@ -1340,7 +1343,7 @@
                         <div class="agent-name">Captain Alex</div>
                         <div class="abilities">
                             Class: Navigator<br><br>
-                            AxioSpin<br>Rotate the ship at any given moment
+                            <strong>AxioSpin</strong><br>Rotate the ship at any given moment
                         </div>
                     </div>
                 </div>
@@ -1357,7 +1360,7 @@
                         <div class="agent-name">Dr. Emma</div>
                         <div class="abilities">
                             Class: Restorer<br><br>
-                            Healsmith<br>Repairs the ship
+                            <strong>Healsmith</strong><br>Repairs the ship
                         </div>
                     </div>
                 </div>
@@ -1372,7 +1375,7 @@
                         <div class="agent-name">Scout Liam</div>
                         <div class="abilities">
                             Class: Recon<br><br>
-                            Gridscan<br>Displays Mines/Ships in a 2x2 grid
+                            <strong>Gridscan</strong><br>Displays Mines/Ships in a 2x2 grid
                         </div>
                     </div>
                 </div>
@@ -1387,7 +1390,7 @@
                         <div class="agent-name">Sage Mia</div>
                         <div class="abilities">
                             Class: Oracle<br><br>
-                            Insight<br>Get a hint for a task
+                            <strong>Insight</strong><br>Get a hint for a task
                         </div>
                     </div>
                 </div>
@@ -1402,7 +1405,7 @@
                         <div class="agent-name">Bomber Max</div>
                         <div class="abilities">
                             Class: Demolisher<br><br>
-                            Riskbreaker<br>If hit by a mine, you lose a turn
+                            <strong>Riskbreaker</strong><br>If hit by a mine, you lose a turn
                         </div>
                     </div>
                 </div>
@@ -1562,8 +1565,7 @@
 
         <section>
             <div class="parallax-six">
-                <h2>Get Ready For The Battle</h2>
-                <h2>Of A Lifetime</h2>
+                <h2>Get Ready For The Battle<br>OF A LIFETIME</h2>
             </div>
         </section>
         <section style="background-color: #000000;" class="register">
